@@ -10,12 +10,17 @@ INCLUDES = -I$(srcdir)/../collections -I$(srcdir)/../defobj -I$(srcdir)/../activ
 
 lib_LTLIBRARIES = libsimtools.la
 
-SRC = AppendFile.m Archiver.m InFile.m \
-	NSelect.m ObjectLoader.m ObjectSaver.m OutFile.m QSort.m \
+SRC = InFile.m OutFile.m AppendFile.m \
+	Archiver.m \
+	ObjectLoader.m ObjectSaver.m \
+	ListShuffler.m NSelect.m QSort.m \
 	UName.m simtools.m
 
 libsimtools_la_SOURCES = $(SRC)
 libsimtools_la_LDFLAGS = -version-info $(CURRENT):$(REVISION):$(AGE)
 
-simtools_HEADERS = AppendFile.h Archiver.h InFile.h NSelect.h \
-	ObjectLoader.h ObjectSaver.h OutFile.h QSort.h UName.h
+simtools_HEADERS = InFile.h OutFile.h AppendFile.h \
+	Archiver.h \
+	ObjectLoader.h ObjectSaver.h \
+	ListShuffler.h NSelect.h QSort.h \
+	UName.h
